--- a/kavyatrivedi/contactuspage/contact.css
+++ b/kavyatrivedi/contactuspage/contact.css
@@ -1,4 +1,4 @@
- @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         /* General Reset */
         * {
             margin: 0;
@@ -6,4 +6,24 @@
             box-sizing: border-box;
         }
      /* develope by kavya trivedi */
+        body {
+            font-family: "Poppins", serif;
+            font-weight: 100;
+            background-color: #F9F9F9;
+            color: #333;
+            line-height: 1.6;
+        }
+
+     /* develope by kavya trivedi */
+        header {
+            background-color: #540579;
+            color: #fff;
+            padding: 1rem 2rem;
+            text-align: center;
+        }
+
+        header h1 {
+            font-size: 2rem;
+        }
+
        
