--- a/kavyatrivedi/contactuspage/contact.css
+++ b/kavyatrivedi/contactuspage/contact.css
@@ -1,4 +1,3 @@
-
  @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         /* General Reset */
         * {
@@ -56,4 +55,21 @@
         }
 
      /* develope by kavya trivedi */
-       
+        form label {
+            font-size: 1rem;
+            margin-bottom: 0.3rem;
+        }
+
+        form input, form textarea {
+            padding: 0.8rem;
+            font-size: 1rem;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        form textarea {
+            resize: none;
+            height: 100px;
+        }
+
+        
