--- a/kavyatrivedi/contactuspage/contact.css
+++ b/kavyatrivedi/contactuspage/contact.css
@@ -72,4 +72,50 @@
             height: 100px;
         }
 
-        
+        form button {
+            padding: 0.8rem;
+            font-size: 1rem;
+            background-color: #540579;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        form button:hover {
+            background-color: #720996;
+        }
+
+        /* FAQ Section */
+        .faq {
+            margin-top: 2rem;
+        }
+
+        .faq-item {
+            margin-bottom: 1rem;
+        }
+
+        .faq-item summary {
+            font-size: 1rem;
+            font-weight: bold;
+            cursor: pointer;
+            
+        }
+
+     /* develope by kavya trivedi */
+        .faq-item p {
+            margin-top: 0.5rem;
+            font-size: 0.95rem;
+            
+            color: #4b4646;
+            font-weight: bold;
+        }
+ /* General Reset */
+        footer {
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+            background-color: #540579;
+            color: #fff;
+        }
