--- a/kavyatrivedi/homepage/homepage.css
+++ b/kavyatrivedi/homepage/homepage.css
@@ -1,1 +1,24 @@
+     /* General Reset kavya trivedi*/
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+     /* develope by kavya trivedi */
+        /* Body Styling  kavya trivedi*/
+        body {
+            font-family: system-ui, sans-serif;
+            background-color: #F2F2F2;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            min-height: 100vh;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+     /* develope by kavya trivedi */
+        /* Navbar */
+       
 
